# rollup-bridge-indexer

./: .dockerignore  .env.dist  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  dipdup.yaml  docker-compose.yml  pyproject.toml  verify_test_indexer.py
.github/workflows/: build.yml
abi/kernel/: abi.json
abi/l2_token/: events.json
bridge_indexer/: __init__.py  dipdup.yaml
bridge_indexer/abi/fa12_token/: abi.json
bridge_indexer/abi/kernel/: events.json
bridge_indexer/abi/kernel_module/: abi.json
bridge_indexer/abi/kernel_native/: abi.json
bridge_indexer/configs/: dipdup.etherlink.yaml  dipdup.postgres.yaml  dipdup.tezos.yaml  ghostnet.yaml  mainnet.yaml  parisnet.yaml  quebecnet.yaml  shadownet.yaml  tezosx-shadownet.yaml
bridge_indexer/handlers/: __init__.py  batch.py  bridge_matcher.py  bridge_matcher_locks.py  rollup_message.py  service_container.py  ticket.py
bridge_indexer/handlers/etherlink/: on_deposit.py  on_transfer.py  on_withdraw.py  on_xtz_deposit.py  on_xtz_withdraw.py
bridge_indexer/handlers/tezos/: on_cement_commitment.py  on_claim_xtz_fast_withdrawal.py  on_head.py  on_rollup_call.py  on_rollup_execute.py
bridge_indexer/hasura/: 00_untracked_foreign_key_relationships.json  00_untracked_rollup_outbox_message-rollup_commitment.json  01_untracked_bridge_operation_relationships.json  01_untracked_l1_deposit-rollup_inbox_message.json  02_untracked_l2_deposit-rollup_inbox_message.json  03_untracked_l1_withdrawal-rollup_outbox_message.json  04_untracked_l2_withdrawal-rollup_outbox_message.json  05_untracked_tezos_ticket-tezos_token.json  06_untracked_etherlink_token-tezos_ticket.json  07_untracked_l1_deposit-tezos_ticket.json  08_untracked_l2_deposit-etherlink_token.json  09_untracked_l2_withdrawal-etherlink_token.json  10_untracked_bridge_deposit-l2_deposit.json  11_untracked_bridge_withdrawal-l2_withdrawal.json  12_untracked_bridge_deposit-l1_deposit.json  13_untracked_bridge_withdrawal-l1_withdrawal.json  14_untracked_l2_deposit-tezos_ticket.json  15_untracked_l2_withdrawal-tezos_ticket.json  16_untracked_bridge_withdrawal-bridge_operation.json  17_untracked_bridge_deposit-bridge_operation.json
bridge_indexer/hooks/: bridge_matcher.py  on_reindex.py  on_restart.py  on_synchronized.py
bridge_indexer/models/: __init__.py  enum.py  etherlink.py
bridge_indexer/sql/on_reindex/: 00_xtz_asset.sql
bridge_indexer/types/fast_withdrawal/: tezos_storage.py
bridge_indexer/types/output_proof/: __init__.py  decoder.py  inode_tree.py  micheline_expression.py  output_proof.py  primitive.py  tree_encoding.py  unpacker.py  x_n.py
bridge_indexer/types/rollup/: tezos_storage.py
bridge_indexer/types/rollup_node/: proof.py
bridge_indexer/types/tezos/: forged_tezos_account.py
configs/: ghostnet.yaml  mainnet.yaml  rainbownet.yaml  shadownet.yaml  tezosx-shadownet-test.yaml  tezosx-shadownet.yaml
docs/: monitoring-explainer.html
evm_indexer/: __init__.py  dipdup.yaml
evm_indexer/handlers/: on_deposit.py  on_transfer.py  on_withdraw.py
evm_indexer/models/: __init__.py
handlers/: alias.py  batch.py  bridge_matcher.py  bridge_matcher_locks.py  michelson_deposit.py  michelson_matcher.py  rollup_message.py  service_container.py  ticket.py
handlers/etherlink/: on_alias_initialized.py  on_deposit.py  on_transfer.py  on_withdraw.py  on_xtz_deposit.py  on_xtz_withdraw.py
handlers/tezos/: on_cement_commitment.py  on_claim_xtz_fast_withdrawal.py  on_head.py  on_michelson_deposit.py  on_rollup_call.py  on_rollup_execute.py
handlers/tezos_x/: on_michelson_deposit.py  on_michelson_deposit_ophash.py
hasura/: 00_untracked_foreign_key_relationships.json  01_untracked_bridge_operation_relationships.json
hooks/: on_reindex.py  on_restart.py  on_synchronized.py
models/: __init__.py  enum.py
tests/: CLAUDE.md
tests/decoder/: test_octez_decoder.py
tests/docker/: smoke.env  smoke_test.sh
tests/e2e/: README.md  run_all.sh  smoke.env  smoke_test.sh
tests/rollup/: test_commitment.py
tests/stand/: README.md  TESTING.md  tezosx-shadownet-test.env.default  tezosx-shadownet-test.yaml  tezosx.env  verify_lib.py
tests/types/: test_serializable_types.py  test_tezos_types.py
tests/unit/: conftest.py
tezos_indexer/: dipdup.yaml
tezos_indexer/configs/: dipdup.etherlink.yaml  dipdup.postgres.yaml  dipdup.tezos.yaml
tezos_indexer/handlers/: on_rollup_call.py
tezos_indexer/models/: __init__.py
types/output_proof/: decoder.py  inode_tree.py  micheline_expression.py  output_proof.py  primitive.py  tree_encoding.py  unpacker.py  x_n.py
types/rollup_node/: proof.py
(+86 files in other folders)
