[project]
name = "bridge_indexer"
version = "0.1.0"
description = "Tezos to Etherlink Bridge Indexer"
authors = ["Igor Sereda <sereda.igor.s@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dipdup",
    "pytezos>=3.13.6",
    "base58>=2.1.1",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "mypy>=1.13.0",
    "black>=24.10.0",
]

[tool.uv.sources]
dipdup = { git = "https://github.com/dipdup-io/dipdup", branch = "next" }

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "single" }

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
line-length = 140
target-version = ["py312"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
