[project]
name = "bridge_indexer"
version = "1.0.0"
description = "Tezos to Etherlink Bridge Indexer"
authors = ["Igor Sereda <sereda.igor.s@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dipdup>=8.3.1",
    "pytezos>=3.14.0",
    "base58>=2.1.1",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "black>=25.1.0",
]

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "single" }

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
line-length = 140
target-version = ["py312"]
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
