[project]
name = "rollup-bridge-indexer"
version = "1.0.0"
description = "Tezos to Etherlink Bridge Indexer"
authors = [
    { name = "Igor Sereda", email = "sereda.igor.s@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dipdup>=8.5.1",
    "base58>=2.1.1",
    "pydantic-settings>=2.8.1",
    "pytezos>=3.16.1",
]

[tool.uv.sources]
dipdup = { git = "https://github.com/dipdup-io/dipdup", branch = "feat/8.6.0-sqd" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "black>=25.1.0",
]

[tool.ruff]
line-length = 140
indent-width = 4
target-version = "py312"
# Don't descend into the rollup_bridge_indexer -> . self-symlink (would re-scan the root).
extend-exclude = ["rollup_bridge_indexer"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RET", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "single" }

[tool.ruff.lint.isort]
force-single-line = true

[tool.black]
line-length = 140
target-version = ["py312"]
skip-string-normalization = true
# Don't recurse the rollup_bridge_indexer -> . self-symlink (black follows symlinks).
extend-exclude = "/rollup_bridge_indexer/"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = false
# The package lives at the repo root; rollup_bridge_indexer is a self-symlink (-> .).
# explicit_package_bases lets `mypy .` map root files to the package namespace,
# and excluding the symlink name stops mypy from following it into infinite recursion.
explicit_package_bases = true
exclude = "rollup_bridge_indexer"

# asyncpg ships no py.typed marker; silence import-untyped from its pgproto helpers.
[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

# rlp ships no py.typed marker; used by the Michelson-deposit op-hash helper.
[[tool.mypy.overrides]]
module = "rlp.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["rollup_bridge_indexer"]

[tool.pytest.ini_options]
# Tests live under tests/; pin testpaths so a bare `pytest` (no path arg) does not
# follow the rollup_bridge_indexer -> . self-symlink and collect the suite N times.
testpaths = ["tests"]
norecursedirs = ["rollup_bridge_indexer", ".venv", ".git", ".*_cache"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
